2007-07-12  Dan Williams  <dcbw@redhat.com>

	* src/backends/NetworkManagerRedHat.c
		- Handle out-of-memory conditions better

2007-07-12  Dan Williams  <dcbw@redhat.com>

	* src/dhcp-manager/nm-dhcp-manager.c
		- (dhclient_run): don't pass G_SPAWN_DO_NOT_REAP_CHILD, let reaping
		    happen automatically

2007-07-11  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (get_next_channel): new function; retrieve the next channel taking
			the companion eth device's scan results into account, looking for
			mesh beacons on each channel.  Too bad we can't use this yet though.
		- (channel_failure_handler): use get_next_channel()

2007-07-11  Dan Williams  <dcbw@redhat.com>

	* include/NetworkManager.h
		- Add MESH_OLPC capability for access points

	* src/nm-device-802-11-wireless.c
		- (process_scan_results): detect MESH_OLPC capability on scanned BSSs
			and set the MESH_OLPC bit in the AP's capabilities

2007-07-11  Dan Williams  <dcbw@redhat.com>

	* src/dhcp-manager/nm-dhcp-manager.c
		- (nm_dhcp_dbus_set_state): only cancel the DHCP timeout when the DHCP
			client gets a valid lease

2007-07-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
	    - (real_act_stage1_prepare): if the activation is user-requested, start
	        all over at mesh stage 1 (school MPP)

2007-07-03  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (channel_failure_handler): if everything fails, turn off mesh device
			link and reset state to MESH_S1_SCHOOL_MPP
		- (mpp_cleanup): remove dhclient.conf when deactivating mpp
		- (nm_get_anycast_addrs): pull anycast addresses from a file
		- (setup_for_mpp, real_act_stage3_ip_config_start): use configurable
			anycast addresses
		- (real_deactivate_quickly): kill dhclient when switching channels too

2007-07-02  Dan Williams  <dcbw@redhat.com>

	Suppress activation of wireless devices until 5 seconds after NM starts,